<resources>
    <string name="app_name">PixPainter</string>
    <string name="create_new_pic">Start drawing</string>
    <string name="columns">Columns</string>
    <string name="rows">Rows</string>
    <string name="smallCanvas">20x20</string>
    <string name="mediumCanvas">40x40</string>
    <string name="largeCanvas">60x60</string>
    <string name="size">x%1$d</string>
    <string name="customCanvas">Custom</string>
    <string name="current">current</string>
    <string name="newColor">new</string>
    <string name="alpha">Alpha</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alphaVal">Alpha: </string>
    <string name="redVal">Red: </string>
    <string name="greenVal">Green: </string>
    <string name="blueVal">Blue: </string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="pencil">Pencil</string>
    <string name="brush">Brush</string>
    <string name="shape">Shape</string>
    <string name="fill">Fill</string>
    <string name="eraser">Eraser</string>
    <string name="pipette">Pipette</string>
    <string name="saveToLocal">Save to Pictures/</string>
    <string name="exportToGallery">Save \u0026 Export to Gallery</string>
    <string name="exportedToGalleryToast">Exported to Gallery</string>
    <string name="saveFailedToast">Save failed</string>
    <string name="clearEditor">Clear image</string>
    <string name="verticalEllipsis">&#8942;</string>
    <string name="titleDescription">Animated title for the application</string>
    <string name="primaryColorCircleDescription">Indicatior for primary color</string>
    <string name="secondaryColorCircleDescription">Indicatior for secondary color</string>
    <string name="paperDescription">Icon for paper</string>
    <string name="undoDescription">Icon for undoing last draw to canvas</string>
    <string name="redoDescription">Icon for redoing last draw to canvas</string>
    <string name="height">h</string>
    <string name="width">w</string>
    <string name="radius">r</string>
    <string name="circle">&#9675;</string>
    <string name="rectangle">&#9633;</string>
    <string name="outlines">&#9723;</string>
    <string name="solid">&#9724;</string>
    <string name="filled">&#8865;</string>

    <string-array name="shape_array">
        <item>Rectangle</item>
        <item>Circle</item>
    </string-array>

    <string-array name="shapefill_array">
        <item>Outlines</item>
        <item>Solid</item>
        <item>Fill</item>
    </string-array>
</resources>
