<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="fi.tamk.jpak.pixpainter.SetupActivity">

    <ImageView
        android:id="@+id/appTitle"
        android:contentDescription="@string/titleDescription"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:padding="6dp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/smallArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="20dp"
        android:onClick="handleSmallClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/smallImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/paperDescription"
            android:src="@drawable/paper"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/smallText"
            android:text="@string/smallCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/darkest"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mediumArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="20dp"
        android:onClick="handleMediumClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mediumImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/paperDescription"
            android:src="@drawable/paper"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/mediumText"
            android:text="@string/mediumCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/darkest"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/largeArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="20dp"
        android:onClick="handleLargeClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/largeImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/paperDescription"
            android:src="@drawable/paper"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/largeText"
            android:text="@string/largeCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/darkest"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/customArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="20dp"
        android:onClick="handleCustomClick"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/customImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/paperDescription"
            android:src="@drawable/paper"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/customText"
            android:text="@string/customCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/darkest"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/customSetupArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>

    <Button
        android:id="@+id/startEditorButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/create_new_pic"
        android:onClick="startEditor"/>

</LinearLayout>
