<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/colorPickerLayout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark">

    <View
        android:id="@+id/colorArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/redText"
            android:text="@string/red"
            android:textColor="#ffaaaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/greenText"
            android:text="@string/green"
            android:textColor="#aaffaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/blueText"
            android:text="@string/blue"
            android:textColor="#bbbbff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <SeekBar
            android:id="@+id/redBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <SeekBar
            android:id="@+id/greenBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

        <SeekBar
            android:id="@+id/blueBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"/>

    </LinearLayout>
</LinearLayout>
