<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/shapeIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textColor="@color/darkest"
        android:textSize="26sp"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="25%"/>

    <TextView
        android:id="@+id/fillIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_toRightOf="@id/shapeIcon"
        android:gravity="center"
        android:textColor="@color/darkest"
        android:textSize="26sp"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="25%"/>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/shapeSizeArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_toRightOf="@id/fillIcon"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_heightPercent="100%"
        app:layout_widthPercent="50%">

        <EditText
            android:id="@+id/heightEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:hint="@string/height"
            android:inputType="numberSigned"
            android:textColor="@color/darkest"
            android:textColorHint="@color/colorAccentDark"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="50%"/>

        <EditText
            android:id="@+id/widthEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/heightEdit"
            android:gravity="center"
            android:hint="@string/width"
            android:inputType="numberSigned"
            android:textColor="@color/darkest"
            android:textColorHint="@color/colorAccentDark"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="50%"/>

        <EditText
            android:id="@+id/radiusEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:hint="@string/radius"
            android:inputType="numberSigned"
            android:textColor="@color/darkest"
            android:textColorHint="@color/colorAccentDark"
            app:layout_heightPercent="100%"
            app:layout_widthPercent="100%"/>
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>
